--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2440,6 +2440,27 @@ body {
 	text-align: center;
  }
 
+ .searchBox_51 input:focus{
+	border-color:#ff6600;
+	box-shadow:  0 0 8px rgba(255 , 102, 0 , 0.4);
+ }
+
+ .searchBox_51 button {
+	background: #5a67f2;
+	color: #fff;
+	border: none;
+	padding: 0.75rem 1.5rem;
+	border-radius: 12px;
+	cursor: pointer;
+	font-weight: 600;
+	transition: 0.3s;
+ }
+
+ .searchBox_51 button:hover {
+	background: #404ed1;
+ }
+
+
 
 
 
