--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2471,6 +2471,12 @@ body {
 	text-align: center;
  }
 
+ .profileForm_51 h2 {
+	margin-bottom: 1.5rem;
+	font-size: 1.5rem;
+	font-weight: 700;
+	color: #e86b13;
+ }
 
 
 
