--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2477,6 +2477,64 @@ body {
 	font-weight: 700;
 	color: #e86b13;
  }
+ .profileForm_51 input {
+	width: 100%;
+	margin: 0.6rem 0;
+    padding: 0.8rem 1rem;
+	border-radius: 12px;
+	border: 1px solid #ddd;
+	outline: none;
+	transition: 0.3s;
+ }
+
+ .profileForm_51 input:focus {
+	border-color: #ff6600;
+	box-shadow: 0 0 8px rgba(255 , 102 , 0 , 0.4);
+ }
+
+ /* Save button */
+
+ .saveBtn_51 {
+	margin-top: 1rem;
+	background: #2ecc71;
+	color: #fff;
+	border: none;
+	width: 100%;
+	padding: 0.9rem;
+	font-size: 1rem;
+	border-radius: 12px;
+	font-weight: 600;
+	cursor: pointer;
+	transition: 0.3s;
+ }
+
+ .saveBtn_51:hover {
+	background: #27ae60;
+ }
+ 
+ /* Profile display */
+ .profileLeft_51,
+ .profileRight_51 {
+	background: #fff;
+	padding: 1.5rem;
+	border-radius: 10px;
+	box-shadow: 0 6px 20px rgba(0,0,0,0.07);
+	margin: 1rem;
+ }
+
+ .profileLeft_51 {
+	text-align: center;
+ }
+
+ .profileImage_51 {
+	border-radius: 50%;
+	margin-bottom: 1rem;
+	border: 4px solid #ff6600;
+ }
+
+ 
+
+
 
 
 
