--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2487,3 +2487,9 @@ body {
 	border: 1px solid rgba(255,255,255,0.1);
 
  }
+
+ .profileForm_51 h2{
+	text-align: center;
+	margin-bottom: 10px;
+	color: #2d3748;
+ }
