--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2420,7 +2420,7 @@ body {
   padding: 2rem;
 
   /* Background Image */
-  background: url("https://images.unsplash.com/photo-1594737625785-cf5c5c9c3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80") 
+  background: url("/img/appoint.jpg") 
               no-repeat center center/cover;
 
   position: relative;
@@ -2501,5 +2501,21 @@ body {
 	color: #ffd700;
 	text-shadow: 0 0 12px rgba(255, 215 , 0 , 0.7);
  }
- 
 
+ .profileForm_51 input{
+	width: 100%;
+	margin: 0.6rem 0;
+	padding: 0.8rem 1rem;
+	border-radius: 10px;
+	border: none;
+	outline: none;
+	background: rgba(255, 255 , 255 , 0.00);
+	color: #fff;
+	transition: 0.3s;
+ }
+ 
+ .profileForm_51 input::placeholder{
+	color: rgba(255,255,255,0.6);
+ }
+
+ 
