--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2518,4 +2518,57 @@ body {
 	color: rgba(255,255,255,0.6);
  }
 
+ .profileForm_51 input:focus{
+	border: 1px solid #FFD700;
+	box-shadow: 0 0 10px rgba(255,215,0,0.6);
+ }
+
+
+ .saveBtn_51{
+	margin-top: 1rem;
+	background: #ffd700;
+	color: #000;
+	border: none;
+	width: 100%;
+	padding: 0.9rem;
+	font-size: 1rem;
+	border-radius: 10px;
+	font-weight: 600;
+	cursor: pointer;
+	transition: 0.3s;
+ }
+
+ .saveBtn_51:hover{
+	background: #b8a01b;
+ }
+
+ /* POFILE DISPLAY LAYOUT */
+
+ .profileLeft_51,
+ .profileRight_51{
+	background: rgba(255,255,255,0.06);
+	padding: 1.5rem;
+	border-radius: 15px;
+	margin: 1rem;
+	border: 1px solid rgba(255,255,255,0.1);
+	width: 100%;
+	max-width: 800px;
+ }
+ .profileLeft_51{
+	text-align: center;
+ }
+
+ .profileImage_51{
+	border-radius: 50%;
+	margin-bottom: 1rem;
+	border: 3px solid #ffd700;
+ }
+
+ .profileLeft_51 h2{
+	margin: 0.5rem 0;
+	color: #ffd700;
+ }
+ .profileCard_51{
+	margin-bottom: 1rem;
+ }
  
