--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2470,7 +2470,7 @@ body {
 
  .searchBox_51 button {
 	background: #FF0700;
-	color: #000;
+	color: #fff;
 	border: none;
 	padding: 0.75rem 1.5rem;
 	border-radius: 10px;
