--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2601,3 +2601,12 @@ body {
 
 
 }
+
+.saveBtn_52{
+	padding: 10px;
+	width: 100%;
+	background-color: #ffd700;
+	border-radius: 15px;
+	border: none;
+	font-weight: bold;
+}
