--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2561,7 +2561,8 @@ body {
  }
 
  .profileImage_51{
-	border-radius: 50%;
+	border-radius: 20%;
+	width: 20%;
 	margin-bottom: 1rem;
 	border: 3px solid #ffd700;
  }
