--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2560,12 +2560,15 @@ body {
 	text-align: center;
  }
 
- .profileImage_51{
-	border-radius: 20%;
-	width: 20%;
-	margin-bottom: 1rem;
-	border: 3px solid #ffd700;
- }
+ .profileImage_51 {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;        
+  border: 3px solid yellow;  
+  object-fit: cover;         
+  box-shadow: 0 0 10px rgba(255, 255, 0, 0.4); 
+}
+
 
  .profileLeft_51 h2{
 	margin: 0.5rem 0;
@@ -2636,4 +2639,23 @@ body {
 	color: red;
 	font-weight: bold;
 	text-transform: uppercase;
+}
+
+/* for profiile image css */
+
+.imageUploadLabel_51 {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.profilePreview_51 {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 10px;
+  box-shadow: 0 0 5px gray;
 }
